--- a/TurboDisabler/Info.plist
+++ b/TurboDisabler/Info.plist
@@ -3,8 +3,43 @@
 <plist version="1.0">
 <dict>
 	<key>IOKitPersonalities</key>
-	<dict/>
+	<dict>
+		<key>st.notexi.TurboDisabler</key>
+		<dict>
+			<key>TurboMode</key>
+			<true/>
+			<key>IOProbeScore</key>
+			<string>9999</string>
+			<key>CFBundleIdentifier</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+			<key>IOClass</key>
+			<string>TurboDisabler</string>
+			<key>IOMatchCategory</key>
+			<string>TurboDisabler</string>
+			<key>IOProviderClass</key>
+			<string>IOResources</string>
+			<key>IOUserClientClass</key>
+			<string>TurboDisablerClient</string>
+			<key>IOResourceMatch</key>
+			<string>IOKit</string>
+		</dict>
+	</dict>
 	<key>OSBundleLibraries</key>
-	<dict/>
+	<dict>
+		<key>com.apple.kpi.bsd</key>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.dsep</key>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.iokit</key>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.libkern</key>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.mach</key>
+		<string>12.0.0</string>
+		<key>com.apple.kpi.unsupported</key>
+		<string>12.0.0</string>
+	</dict>
+	<key>OSBundleRequired</key>
+	<string>Root</string>
 </dict>
 </plist>
